--- a/style.css
+++ b/style.css
@@ -99,8 +99,11 @@ nav>hr{
   display: inline-block;
 }
 
-.dropdown-content {
+.hide{
   display: none;
+}
+
+.dropdown-content {
   position: absolute;
   background-color: #202020;
   border-radius: 10px;
@@ -117,9 +120,9 @@ nav>hr{
   cursor: pointer;
 }
 
-.dropdown-content span:hover {background-color: rgb(0, 0, 0);}
+/* .dropdown-content span:hover {background-color: rgb(0, 0, 0);} */
 
-.dropdown:hover .dropdown-content {display: block;}
+/* .dropdown:hover .dropdown-content {display: block;} */
 
 @media only screen and (max-width: 600px) {
     .books-container{
